# syn_via_diff_2_real

./: Makefile  README.md  pyproject.toml
configs/: default.yaml  lora.yaml  prompts.yaml
scripts/: compute_fid.py  tile_infer.py  train_lora.py
syn_via_diff/: __init__.py  config.py  controlnet_runner.py  data_io.py  lora_utils.py  masks.py  metrics.py  pipeline.py  style_bank.py  viz.py
tests/: test_data_io.py  test_masks.py
